feat: implementação mvp faltante